gcc/testsuite/rust/rustc/ui/issues/issue-17405.rs
enum Foo {
    Bar(isize)
}

fn main() {
    match Foo::Bar(1) {
        Foo { i } => () // { dg-error ".E0574." "" { target *-*-* } }
    }
}

